[package]
name = "procwatch"
version = "0.1.0"
edition = "2021"
description = "Lightweight daemon that monitors process resource usage and sends alerts via webhook"

[[bin]]
name = "procwatch"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
